# rural-bolivia-housing-analytics

./: .gitignore  CITATION.cff  LICENSE  PRIVACY.md  README.md  pyproject.toml  run_analysis.ps1
.github/workflows/: ci.yml
data/: README.md  data_dictionary.csv
data/synthetic/: households_synthetic.csv  members_synthetic.csv
docs/: README_LINK_AUDIT.md  VALIDATION_REPORT.md  index.html  research-paper.html
docs/assets/css/: site.css
docs/assets/data/: project-content.json
docs/assets/js/: site.js
notebooks/: exploratory-analysis.ipynb
reports/: STROBE-checklist.md  executive-summary.md  key_metrics.json  model_results.csv  references.bib  research-paper.md  technical-report.qmd
sql/: analytical_model.sql
src/: __init__.py  analyze.py  build_portfolio.py  build_project.py  generate_synthetic.py  validate.py
tests/: test_pipeline.py
